css/style.css
html, body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: Helvetica, Arial, sans-serif;
}
/* The side panel */
#sidePanel {
    height: 100%;
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    list-style: none;
    background: #311D1D;
    transition: 0.5s; /* 0.5 second transition effect to slide in the sidePanel */
    overflow-y: scroll;
    overflow-x: hidden;
}

/* Open and Close panel position styling */
.openSidePanel{
    width: 275px !important;
}
.closeSidePanel{
    width: 0;
}
.closeMain {
    margin-left: 0;
}
.openMain {
    margin-left: 275px !important;
}

@media screen and (max-height: 450px) {
    #sidePanel {padding-top: 15px;}
    #sidePanel {font-size: 18px;}
}

/* scroll bar */
::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    background-color: #311D1D;
}
::-webkit-scrollbar-thumb {
    background-color: #c74438;
}
body {
    scrollbar-face-color: #c74438; /* ie */
}

#filters, #place-list {
    width: 90%;
    margin: 0 0.6em;
}
.results {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
#place-list {
    border-top: 1px solid #655656;
    margin-top: 1em;
}
#filters {
    margin-bottom: 1em;
}
.inner-text {
    display: block;
    color: #E5E3E3;
    text-decoration: none;
    transition: color 0.2s, background 0.5s;
}
input {
    width: 80%;
    margin: 1em 0;
    background-color: #E5E3E3;
    border-radius: 5px;
}
input[type="text"] {
    color: #311D1D;
}
.sidepanel-details {
    margin: 6px 3px;
    color: #E5E3E3;
}
.place-details-box {
    border: 3px solid #655656;
    margin: 2px;
    padding: 3px;
}
.sidepanel-details a{
    text-decoration: none;
}
.sidepanel-details a:hover {
    color: #C74438;
    font-weight: 500;
}
a.name:hover {
    color: #c74438;
}
.highlightedPlace {
    color: #c74438 !important;
}
.rating-button:hover {
    background-color: #E5E3E3;
    color: #655656;
}
.rating-button {
    background-color: #655656;
    border: 1px solid #E5E3E3;
    margin: 5px;
    color: #E5E3E3;
    padding: 5px;
    text-decoration: none;
}
.error {
    color: #C74438;
    font-size: 0.7em;
    padding: 2px;
}
#main {
    transition: margin-left .5s;
    width: 100%;
    z-index: 2;
    height: 100%;
    position: fixed;
    overflow: hidden;
    padding-left: 50px;
    background-color: #655656;
}
#toggle-nav-button {
    display: inline-block;
    position: absolute;
    top: 15px;
    left: 15px;
    z-index: 2;
    width: 20px;
    height: 20px;
    cursor: pointer;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect width='30' height='6'/><rect y='24' width='30' height='6'/><rect y='12' width='30' height='6'/></svg>");
    background-size: contain;
}
#map {
    height: 100%;
    width: 100%;
}
/* Google Maps info window */
.iw-text {
    padding: .2em;
}
#iw-name {
    font-size: 1.2em;
    background-color: #311D1D;
    color: #FFF;
    border-radius: 6px 6px 0 0;
    margin-bottom: 0;
}
#iw-website {
    background-color: #655656;
    margin-top: 0;
    text-transform: uppercase;
    line-height: .9em;
    font-size: 1em;
    text-align: right;
}
a.iw-website {
    text-decoration: none;
    color: #E5E3E3;
    margin-right: 10px;
}
a.iw-website:hover{
    font-weight: 500;
    color: #C74438;
    color: #FFF;
    font-size: 1.1em;
}
#iw-phone-number {
    float: left;
    text-decoration: none;
    color: black;
}
.iw-rating {
    text-align: center;
    padding: 4px;
    margin-top: 15px;
    border-radius: 10px;
    color: #311D1D;
    background-color: #C74438;
    border: 2px solid #655656;
}
.iw-error {
    padding: 4px;
    float: right;
    width: 85px;
    background-color: #C74438;
    border: 2px solid #655656;
    border-radius: 10px;
    color: #FFF;
}
.iw-error p{
    padding: 2px;
    margin: 0;
}
#yelp-rating {
    float: right;
}
#google-rating {
    float: left;
}
.rating-num {
    font-size: 2em;
    padding: .1em;
    color: #FFF;
    font-family: monospace;
}

